<resources>
    <string name="app_name">Friendly Letters</string>
    <string name="app_game_activity_name">Friendly Letters</string>
    <string name="app_setting_activity_name">Friendly Letters - settings</string>

    <string name="resources_dir_name" translatable="false">FriendlyLetters</string>
    <string name="prefix_shape_file_name" translatable="false">FLshape_</string>
    <string name="no_media_file_name" translatable="false">.nomedia</string>
    <string name="materials_dir_name" translatable="false">materials</string>
    <string name="file_with_configurations_dir_name" translatable="false">settings</string>
    <string name="file_with_configurations_file_name" translatable="false">configurations.json</string>
    <string name="intent_name_configuration_id" translatable="false">configurationID</string>
    <string name="intent_game_report_correctly_solved" translatable="false">reportCorrectlySolved</string>

    <string name="start_game_title">Friendly Letters</string>
    <string name="start_game_message">Active configuration</string>

    <string name="game_report_difficulty_level">Difficulty level</string>
    <string name="game_report_number_of_level">Number of steps</string>
    <string name="game_report_correctly_solved">Correctly written</string>
    <string name="game_report_effectiveness">Effectiveness</string>
    <string name="game_report_button">OK</string>

    <string name="splash_activity_title">Friendly Letters</string>
    <string name="splash_activity_message">Applications created as part of the Gdansk University of Technology project and Institute for Child Development in Gdansk (www.iwrd.pl). As part of the project, we follow two principles: non-profit and open-source. IWRD, Gdansk University of Technology and no participant in the project have material benefits from participating in the development of the application.</string>

    <string name="information_message_saving_failed">Adding a new shape failed. Check the application\'s permissions</string>
    <string name="information_message_removing_material_failed">Removal of the material failed. Check the application\'s permissions</string>
    <string name="information_message_saving_new_material_success">The material has been added</string>
    <string name="information_message_lack_of_materials">No materials available. Check the application settings</string>
    <string name="information_message_new_material_is_not_drawn">No shape has been drawn</string>
    <string name="information_message_least_one_element_must_be_available">At least one element must be available</string>
    <string name="information_message_some_material_must_be_selected">Select materials</string>
    <string name="information_message_removing_is_possible_for_disabled_materials">Only excluded materials can be removed. Turn them off, and then use the delete option</string>
    <string name="information_message_new_configuration_has_been_added">Configuration has been added to the list</string>
    <string name="information_message_configuration_has_been_removed">Configuration has been removed</string>
    <string name="information_message_removing_activated_configuration">Only inactive configurations can be deleted</string>
    <string name="information_message_least_one_configuration_must_be_available">At least configuration must be available</string>
    <string name="information_message_configuration_has_been_activated">The selected configuration has been activated</string>
    <string name="information_message_provided_incorrect_configuration_name">The name should only contain alphanumeric characters</string>
    <string name="information_message_provided_incorrect_length_configuration_name">The name can not be longer than 40 characters</string>
    <string name="information_message_provided_incorrect_mark">The name you entered is incorrect. The name should be one-character</string>
    <string name="information_message_permit_must_be_granted">Appropriate permissions should be granted for proper operation of the application</string>

    <string name="information_message_positive_button_close">CLOSE</string>
    <string name="information_message_test_mode_message">Enabled test mode means a single number of attempts per step, no praises and no starting point while writing. A summary is displayed after each test. Remember to set the right number of steps.</string>
    <string name="information_message_start_point_message">Enabled starting point means that the point from which you have to start writing is displayed on the material. Remember that the test mode means the starting point is off.</string>
    <string name="information_message_commands_reading_message">Enabled voice command reading means that before each step one command from selected ones will be read. Remember that only alphanumeric characters are reinforced.</string>
    <string name="information_message_commands_displaying_message">The option to display commands means that one command from selected ones will be displayed in each step. Remember that only alphanumeric characters are reinforced.</string>
    <string name="information_message_verbal_praises_reading_message">Enabled option to read praise means that after each correctly performed step, one praise from selected ones will be read.</string>

    <string name="check_removing_decisions_title">Warning</string>
    <string name="check_removing_materials_decisions_message">Do you want to permanently delete all selected materials?</string>
    <string name="check_removing_configuration_decisions_message">Do you want to permanently delete the selected configuration?</string>
    <string name="check_importing_decisions_title">Information</string>
    <string name="check_importing_materials_decisions_message">A small number of available materials. Do you want to add the default set?</string>
    <string name="check_creating_configuration">The name of the new configuration</string>
    <string name="check_creating_material_title">The name of the new material</string>
    <string name="check_creating_material_message">Enter the one-character name for the material. The name is optional, but its absence will prevent reinforcements. Only alphanumeric characters are reinforced. Remember that letter size is important to display.</string>
    <string name="check_decisions_positive_button">YES</string>
    <string name="check_decisions_positive_button_add">Add</string>
    <string name="check_decisions_negative_button">NO</string>
    <string name="check_decisions_negative_button_cancel">Cancel</string>

    <string name="settings_configurations">LIST OF CONFIGURATIONS</string>
    <string name="settings_configurations_create_new">CREATE</string>
    <string name="settings_configurations_default_name">Default Configuration</string>

    <string name="settings_tab_aspect">APPEARANCE</string>
    <string name="settings_tab_aspect_material_color">Color of pattern:</string>
    <string name="settings_tab_aspect_trace_color">Color of writing:</string>
    <string name="settings_tab_aspect_background">Background colour:</string>

    <string name="settings_tab_material">MATERIAL</string>
    <string name="settings_tab_material_button_remove_material">Delete material</string>
    <string name="settings_tab_material_button_enable_material">ON / OFF</string>
    <string name="settings_tab_material_button_add_new_material">Create material</string>
    <string name="settings_tab_add_new_material_clean">CLEAN</string>
    <string name="settings_tab_add_new_material_add">ADD</string>

    <string name="settings_tab_learning">LEARNING WAY</string>
    <string name="settings_tab_learning_learning_mode">Test mode</string>
    <string name="settings_tab_learning_display_start_point">Start point</string>
    <string name="settings_tab_learning_difficulty_level">Difficulty level:</string>
    <string name="settings_tab_learning_difficulty_level_easy">EASY</string>
    <string name="settings_tab_learning_difficulty_level_medium">MEDIUM</string>
    <string name="settings_tab_learning_difficulty_level_hard">HARD</string>
    <string name="settings_tab_learning_level_count">Number of steps:</string>
    <string name="settings_tab_learning_attempt_count">Number of attempts:</string>
    <string name="settings_tab_learning_time_limit">Writing time limit:</string>

    <string name="settings_tab_reinforcement">REINFORCEMENT</string>
    <string name="settings_tab_reinforcement_choose_commands">Select command types:</string>
    <string name="settings_tab_reinforcement_commands_reading">Voice reading of command</string>
    <string name="settings_tab_reinforcement_commands_displaying">Displaying commands</string>
    <string name="settings_tab_reinforcement_choose_verbal_praises">Select verbal praise:</string>
    <string name="settings_tab_reinforcement_verbal_praises_reading">Voice reading of verbal praise</string>
    <string name="settings_tab_reinforcement_command_1">Write</string>
    <string name="settings_tab_reinforcement_command_2_letter">Letter</string>
    <string name="settings_tab_reinforcement_command_2_digit">Digit</string>
    <string name="settings_tab_reinforcement_command_mark_tag">{sign}</string>
    <string name="settings_tab_reinforcement_verbal_praise_1">Perfect</string>
    <string name="settings_tab_reinforcement_verbal_praise_2">Excellently</string>
    <string name="settings_tab_reinforcement_verbal_praise_3">All right</string>
    <string name="settings_tab_reinforcement_verbal_praise_4">Great</string>

    <string name="text_reader_exception_zero">zero</string>
    <string name="text_reader_exception_one">one</string>
    <string name="text_reader_exception_two">two</string>
    <string name="text_reader_exception_three">three</string>
    <string name="text_reader_exception_four">four</string>
    <string name="text_reader_exception_five">five</string>
    <string name="text_reader_exception_six">six</string>
    <string name="text_reader_exception_seven">seven</string>
    <string name="text_reader_exception_eight">eight</string>
    <string name="text_reader_exception_nine">nine</string>
    <string name="text_reader_exception_b">b</string>
    <string name="text_reader_exception_c">c</string>
    <string name="text_reader_exception_cc">c</string>
    <string name="text_reader_exception_d">d</string>
    <string name="text_reader_exception_f">f</string>
    <string name="text_reader_exception_ll">l</string>
    <string name="text_reader_exception_m">m</string>
    <string name="text_reader_exception_n">n</string>
    <string name="text_reader_exception_nn">n</string>
    <string name="text_reader_exception_p">p</string>
    <string name="text_reader_exception_t">t</string>
    <string name="text_reader_exception_w">w</string>
    <string name="text_reader_exception_z">z</string>
    <string name="text_reader_exception_zz">z</string>
    <string name="text_reader_exception_zzz">z</string>

</resources>