<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_settings_background"
    android:orientation="vertical"
    tools:context=".SettingsMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:baselineAligned="false">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".21"
            android:background="@drawable/settings_menu_border"
            android:paddingTop="@dimen/settings_menu_bar_padding_size"
            android:paddingBottom="@dimen/settings_menu_bar_padding_size">

            <Button
                android:id="@+id/aspectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="tabAspectOnClick"
                android:text="@string/settings_tab_aspect"
                android:textColor="@color/color_settings_tab_selected"
                android:textStyle="bold"
                android:textSize="@dimen/settings_menu_bar_font_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".21"
            android:background="@color/color_settings_tab_background"
            android:paddingTop="@dimen/settings_menu_bar_padding_size"
            android:paddingBottom="@dimen/settings_menu_bar_padding_size">

            <Button
                android:id="@+id/materialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="tabMaterialOnClick"
                android:text="@string/settings_tab_material"
                android:textColor="@color/color_settings_tab_unselected"
                android:textSize="@dimen/settings_menu_bar_font_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".31"
            android:background="@color/color_settings_tab_background"
            android:paddingTop="@dimen/settings_menu_bar_padding_size"
            android:paddingBottom="@dimen/settings_menu_bar_padding_size">

            <Button
                android:id="@+id/learningButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="tabLearningOnClick"
                android:text="@string/settings_tab_learning"
                android:textColor="@color/color_settings_tab_unselected"
                android:textSize="@dimen/settings_menu_bar_font_size" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".27"
            android:background="@color/color_settings_tab_background"
            android:paddingTop="@dimen/settings_menu_bar_padding_size"
            android:paddingBottom="@dimen/settings_menu_bar_padding_size">

            <Button
                android:id="@+id/reinforcementButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="tabReinforcementOnClick"
                android:text="@string/settings_tab_reinforcement"
                android:textColor="@color/color_settings_tab_unselected"
                android:textSize="@dimen/settings_menu_bar_font_size" />
        </FrameLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/settings_aspect_content_font_size"
                android:textColor="@color/color_settings_content_font"
                android:text="@string/settings_tab_aspect_material_color"/>
            <LinearLayout
                android:id="@+id/settings_material_colors_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/settings_aspect_content_font_size"
                android:textColor="@color/color_settings_content_font"
                android:text="@string/settings_tab_aspect_trace_color"/>
            <LinearLayout
                android:id="@+id/settings_trace_colors_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="15dp">
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/settings_aspect_content_font_size"
                android:textColor="@color/color_settings_content_font"
                android:text="@string/settings_tab_aspect_background"/>
            <LinearLayout
                android:id="@+id/settings_background_colors_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:paddingTop="10dp">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>