<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_game_restart_view_background"
    tools:context=".activity.GameReportActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/triangles"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/game_report_difficulty_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/game_report_number_of_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/game_report_correctly_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/game_report_effectiveness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:textSize="15sp"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/game_report_button"
            android:padding="10dp"
            android:background="@drawable/game_report_button"
            android:onClick="closeReportOnClick" />
    </LinearLayout>

</RelativeLayout>